--- a/test_html/test_html.html
+++ b/test_html/test_html.html
@@ -23,6 +23,8 @@ body {
     margin-top: 1em;
     margin-left: 1em;
     text-align: center;
+    font-family: arial, helvetica, sans-serif;
+    font-size: 9pt;
 }
 
 h1 {
@@ -63,8 +65,8 @@ html {
 .menu li {
   padding: 8px;
   margin-bottom: 7px;
-  background-color: #33b5e5;
-  color: #ffffff;
+  background-color: rgb(192, 192, 192);
+  color: #000000;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -73,7 +75,7 @@ html {
 }
 
 .aside {
-  background-color: #33b5e5;
+  background-color: rgb(192, 192, 192);
   padding: 15px;
   color: #ffffff;
   text-align: center;
@@ -82,17 +84,20 @@ html {
 }
 
 .footer {
-  background-color: #0099cc;
+  background-color: rgb(202, 176, 95);
   color: #ffffff;
   text-align: center;
   font-size: 12px;
-  padding: 15px;
+  padding: 10px;
 }
 
 .toppanel {
     background-color: rgb(250, 250, 210);
 }
 
+.middlepanel {
+    background-color: rgb(240, 240, 240);
+}
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
@@ -131,7 +136,6 @@ html {
 </style>
 </head>
 <body>
-
 <div class="row">
   <div class="col-1 col-s-1">
   </div>
@@ -139,35 +143,76 @@ html {
   <div class="col-10 col-s-9">
     <div class="row toppanel">
       <div class="col-12 col-s-12 title">
+        <img src="http://www.helsinki.fi/science/now/images/nowlogoTN.png" alt="NOW logo" align="left">
         <h1>NOW</h1>
         <h2>New and Old Worlds</h2>
         <h2>Database of fossil mammals</h2>
+        <p align="left">&copy; Aino Martiskainen</p>
       </div>
     </div>
 
     <div class="row">
       <div class="col-3 col-s-3 menu">
         <ul>
-          <li>The Flight</li>
-          <li>The City</li>
-          <li>The Island</li>
-          <li>The Food</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="conventions.html">Data Conventions</a></li>
+          <li><a href="database.html">View Database</a></li>
+          <li><a href="browsingLists.html">Browsing - Lists</a></li>
+          <li><a href="browsingDetails.html">Browsing - Details</a></li>
+          <li><a href="Export_Maps.html">Export and Maps</a></li>
+          <li><a href="board.html">Advisory Board</a></li>
+          <li><a href="publications.html">Publications</a></li>
+          <li><a href="ecometrics.html">Dental ecometrics</a></li>
+          <li><a href="fieldArchive.html">NOW Field Archives</a></li>
+          <li><a href="acknowledgements.html">Acknowledgements</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="links.html">Links</a></li>
         </ul>
       </div>
 
-      <div class="col-6 col-s-9">
-        <h1>The City</h1>
-        <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
+      <div style="vertical-align: top; text-align: justify;" class="col-6 col-s-9 middlepanel">
+        <p>The NOW (New and Old Worlds) fossil mammal database contains information about Cenozoic land mammal taxa and localities. The emphasis of the database has been on the European Miocene and Pliocene but North American localities, covering the whole Cenozoic, were added to the public database in 2016. African localities are currently being added and updated, and the temporal scale is also becoming wider for both Eurasia and Africa, with Pleistocene and Paleogene localities being added into the database. The NOW database is maintained and coordinated by Indrė Žliobaitė in collaboration with associate coordinators, a steering group and an international advisory board.</p>
+        <h2>NOW data</h2>
+        <p>The nucleus of the database is a locality table and a species table, relationally linked by means of a locality-species correlation table (in essence, a table of localities and their faunal lists). Additions and updates are tied to references. The aim of the database is that each species (including higher taxa such as "Machairodontini indet. large sp." or "Rhinocerotidae indet. indet.") is given certain attributes describing anatomy and inferred diet, locomotion and other properties. Similarly, the geographic location, age, stratigraphy, lithology, taphonomy and environmental interpretation of each locality is described to the extent that these are known. It is also worth noting that not all datasets that have been added to NOW are of equal quality, and users should be aware of this fact. Please also note that in the North American data spatially or temporally close localities have been have been fused to more inclusive spatiotemporal entities prior to entry, whereas in the Old World the localities are in most cases individual sites. This does not affect the analysis on continental or regional levels (see e.g. Jernvall & Fortelius 2002, 2004, available from Publications), but might affect locality-to-locality comparisons between North America and the Old World. Revision of the data by NOW advisory board members and all users is an ongoing process and an integral part of the NOW project.</p>
+        <h2>History</h2>
+        <p>A workshop organised by Ray Bernor, Volker Fahlbusch and Siegfried Rietschel in 1992 at Schloss Reisensburg in Bavaria, Germany was the starting point in the development of NOW. Participants in the workshop had been requested to compile revised lists of taxa and localities, to provide a database for later distribution within the group. The purpose of the workshop was to review the evidence for provinciality and diachrony of change between Central Europe and the Eastern Mediterranean realm during the Middle and Late Miocene. A main source of coordinated data input and revision was the European Science Foundation Network on Hominoid Evolution and Environmental Change in the Neogene of Europe (1995–1998). For most of its existence, the acronym NOW has been derived from the words "Neogene of the Old World" but as NOW has since expanded to cover most of the Eurasian continent for the post-Oligocene (ca 25–0.01 million years ago), and is still expanding in both temporal and geographic scale, the words behind the acronym were officially changed to "New and Old Worlds" in early 2012. In 2016, North American data was added to the database, based on the “Tertiary Mammals of North America” books (Janis et al. 1998 and Janis et al. 2008).</p>
+
+        <h2>Latest new features & fixes to the NOW database</h2>
+
+        <h3>2019/10:</h3>
+        <ul>
+          <li>Data: Body mass data has been added to 1258 species</li>
+          <li>Data: South American data added from Croft, D.A., 2016. Horned armadillos and rafting monkeys: the fascinating fossil mammals of South America.</li>
+          <li>Added new taxonomical fields: Subclass or Superorder, Suborder or Superfamily</li>
+          <li>Fix: coordinate services in the data entry</li>
+        </ul>
+        <h3>2019/05:</h3>
+        <ul>
+          <li>Data: New MN units (Hilgen, 2012) are added to the time units</li>
+          <li>Data: 'Findout' taxa updated as 'indet.'</li>
+          <li>Added an error reporting button (contact) for Locality, Species and Reference</li>
+          <li>Added a FAQ page</li>
+          <li>Added “unworn” to mesowear categories</li>
+          <li>Added a list of metadata of the website, including the major contributors of the last few months</li>
+          <li>Added into the download file species that have no public locality (interesting because of traits)</li>
+          <li>Updated the NOW Advisoy Board listing</li>
+          <li>Fix: Trim all taxa before saving them in the database.</li>
+        </ul>
+
+        <h2>Citation</h2>
+        <h4>Minimum required attribution</h4>
+        <p>Data (http://www.helsinki.fi/science/now/) by The NOW Community / CC BY 4.0.</p>
+        <h4>Suggested citation or attribution</h4>
+        <p>The NOW Community [year]. New and Old Worlds Database of Fossil Mammals (NOW). Licensed under CC BY 4.0. Release [number of release], retrieved [download date] from http://www.helsinki.fi/science/now/.</p>
+        <h3>Database software</h3>
+        <p>The PHP-based user interface was planned and developed mainly by Gudrun Evans, who also created the previous one, and finished by Mr. Jouni Vepsäläinen of <a href="http://www.enporia.com/" target="_blank"><strong>Enporia Ltd</strong></a>.</p>
       </div>
 
       <div class="col-3 col-s-12">
         <div class="aside">
-          <h2>What?</h2>
-          <p>Chania is a city on the island of Crete.</p>
-          <h2>Where?</h2>
-          <p>Crete is a Greek island in the Mediterranean Sea.</p>
-          <h2>How?</h2>
-          <p>You can reach Chania airport from all over Europe.</p>
+          <h2>NOW 25 years</h2>
+          <p><a href="../now/pdf/NOW_25_book_wbs.pdf" target="_blank">NOW 25 years anniversary book: call for contributions. Indicate your interest by November 30, 2019.</a></p>
         </div>
       </div>
     </div>
@@ -178,7 +223,8 @@ html {
 </div>
 
 <div class="footer">
-  <p>Resize the browser window to see how the content respond to the resizing.</p>
+  <h3>License</h3>
+  <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /> Except where otherwise <a rel="note" href="note.html">noted</a>, content on this site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p>
 </div>
 
 </body>
